# keelplane

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
assets/: dwm-dogfood-progress.json  dwm-live-benchmark.json
depone/: __init__.py  __main__.py
docs/: automation-roadmap.md  command-reference.md  dwm-branding.md  github-research.md  keelplane-gate-vs-sandbox-measurement.md  release-history.md  spec.md  v0.5-decision.md  v0.5-plan-schema-evaluator-spec.md  v1-decision.md  v1-first-slice-compiler-spec.md  v10-decision.md  v10-product-packaging-spec.md  v10-product-packaging.workflow.plan.json  v102-live-proof-1-spec.md  v104-decision.md  v104-product-direction-spec.md  v106-decision.md  v106-multi-wave-spec.md  v107-agent-fabric-control-plane-spec.md  v107-decision.md  v108-agent-fabric-reference-adapter-spec.md  v108-decision.md  v109-agent-fabric-capture-bridge-spec.md  v109-decision.md  v11-decision.md  v11-operator-guidance-spec.md  v11-operator-guidance.workflow.plan.json  v110-agent-fabric-report-assurance-spec.md  v110-decision.md  v111-agent-fabric-operator-view-spec.md  v111-decision.md  v112-agent-fabric-lifecycle-smoke-spec.md  v116-agent-fabric-smoke-cli-spec.md  v116-decision.md  v117-agent-fabric-harness-snapshot-spec.md  v117-decision.md  v118-agent-fabric-adapter-smoke-spec.md  v118-decision.md  v119-agent-fabric-claim-gate-spec.md  (+87 more)
keelplane-v105-final/: AUDIT-KO.md
measurements/: gate_vs_sandbox.py
packaging/: dwm-adapters.json  dwm-package.json
references/: workflow-plan-schema.md
(+295 files in other folders)
